crates/nash-can/src/snapshots/nash_can__module__tests__nested_right_operator_sections.snap
---
source: crates/nash-can/src/module.rs
description: "module Main exposing (..)\n\nimport Basics exposing (..)\n\nsection = (+ ((+ 1) 2))\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 8,
                    },
                },
                value: "section",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 11,
                    },
                    end: Position {
                        line: 5,
                        column: 24,
                    },
                },
                value: Lambda {
                    parameters: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 11,
                                },
                                end: Position {
                                    line: 5,
                                    column: 24,
                                },
                            },
                            value: Var(
                                "$section",
                            ),
                        },
                    ],
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 11,
                            },
                            end: Position {
                                line: 5,
                                column: 24,
                            },
                        },
                        value: Binop {
                            symbol: "+",
                            operator_home: ModuleName {
                                package: None,
                                name: "Basics",
                            },
                            reference: QualifiedName {
                                home: ModuleName {
                                    package: None,
                                    name: "Basics",
                                },
                                name: "add",
                            },
                            annotation: Annotation {
                                context: [],
                                free_vars: [
                                    "a",
                                ],
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            },
                            left: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 11,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 24,
                                    },
                                },
                                value: VarLocal(
                                    "$section",
                                ),
                            },
                            right: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 15,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 22,
                                    },
                                },
                                value: Call {
                                    function: Located {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 15,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 20,
                                            },
                                        },
                                        value: Lambda {
                                            parameters: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 5,
                                                            column: 15,
                                                        },
                                                        end: Position {
                                                            line: 5,
                                                            column: 20,
                                                        },
                                                    },
                                                    value: Var(
                                                        "$section1",
                                                    ),
                                                },
                                            ],
                                            body: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 5,
                                                        column: 15,
                                                    },
                                                    end: Position {
                                                        line: 5,
                                                        column: 20,
                                                    },
                                                },
                                                value: Binop {
                                                    symbol: "+",
                                                    operator_home: ModuleName {
                                                        package: None,
                                                        name: "Basics",
                                                    },
                                                    reference: QualifiedName {
                                                        home: ModuleName {
                                                            package: None,
                                                            name: "Basics",
                                                        },
                                                        name: "add",
                                                    },
                                                    annotation: Annotation {
                                                        context: [],
                                                        free_vars: [
                                                            "a",
                                                        ],
                                                        typ: Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 0,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 0,
                                                                },
                                                            },
                                                            value: Var(
                                                                "a",
                                                            ),
                                                        },
                                                    },
                                                    left: Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 5,
                                                                column: 15,
                                                            },
                                                            end: Position {
                                                                line: 5,
                                                                column: 20,
                                                            },
                                                        },
                                                        value: VarLocal(
                                                            "$section1",
                                                        ),
                                                    },
                                                    right: Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 5,
                                                                column: 18,
                                                            },
                                                            end: Position {
                                                                line: 5,
                                                                column: 19,
                                                            },
                                                        },
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                },
                                            },
                                        },
                                    },
                                    arguments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 5,
                                                    column: 21,
                                                },
                                                end: Position {
                                                    line: 5,
                                                    column: 22,
                                                },
                                            },
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ],
                                },
                            },
                        },
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
