crates/nash-can/src/snapshots/nash_can__module__tests__not_found_binop.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nx = (+)\n"
info: diagnostic
---
nash::names::not_found_binop

  × Unknown operator `(+)`.
   ╭─[src/Main.nash:3:5]
 2 │ 
 3 │ x = (+)
   ·     ───
   ╰────
  help: Import and expose the operator.
