crates/nash-can/src/snapshots/nash_can__module__tests__not_found_var.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = nonexistent\n"
info: diagnostic
---
nash::names::not_found_var

  × Unknown variable `nonexistent`.
   ╭─[src/Main.nash:3:5]
 2 │ 
 3 │ f = nonexistent
   ·     ───────────
   ╰────
  help: Similar names:

            f
            Builtin.bData
            Builtin.iData
            Builtin.listData
