crates/nash-can/src/snapshots/nash_can__module__tests__not_found_var_qualified.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo\n\nx = Foo.nonexistent\n"
info: diagnostic
---
nash::names::not_found_var

  × Unknown variable `Foo.nonexistent`.
   ╭─[src/Main.nash:5:5]
 4 │ 
 5 │ x = Foo.nonexistent
   ·     ───────────────
   ╰────
  help: Similar names:

            Builtin.listData
            Foo.bar
            Builtin.bData
            Builtin.fstPair
