crates/nash-can/src/snapshots/nash_can__module__tests__op_as_value.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Basics exposing (..)\n\nx = (+)\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 2,
                    },
                },
                value: "x",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 5,
                    },
                    end: Position {
                        line: 5,
                        column: 8,
                    },
                },
                value: VarOperator {
                    symbol: "+",
                    operator_home: ModuleName {
                        package: None,
                        name: "Basics",
                    },
                    reference: QualifiedName {
                        home: ModuleName {
                            package: None,
                            name: "Basics",
                        },
                        name: "add",
                    },
                    annotation: Annotation {
                        context: [],
                        free_vars: [
                            "a",
                        ],
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
